project/tests/in_progress/for_main/bad/variables/init/pointers/00045/local/int_local_ptr.c
#include <stdio.h>

int main() {
    int a = 5;
    int b = 5;
    int *c = &b;
    printf("%d\n", *c);
    printf("%d\n", *&a);
    return 0;
}
